P00 - POA reference cell. Requires small horizon shading value in .json files

--- a/SAM/2 - pySAM by Organized Simulations.ipynb
+++ b/SAM/2 - pySAM by Organized Simulations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "b428daac",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "24affbfa",
    "metadata": {},
    "outputs": [
@@ -45,14 +45,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9.3\n"
+      "0.9.3\n",
+      "4.2.0\n"
      ]
     }
    ],
    "source": [
     "import PySAM\n",
     "import pvlib\n",
-    "print(pvlib.__version__)"
+    "print(pvlib.__version__)\n",
+    "print(PySAM.__version__)"
    ]
   },
   {
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "6a8b3959",
    "metadata": {},
    "outputs": [],
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "5c8bdc8b",
    "metadata": {},
    "outputs": [],
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "f2b9cd7a",
    "metadata": {},
    "outputs": [],
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "3339f1bb",
    "metadata": {},
    "outputs": [],
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "3c0fad65",
    "metadata": {},
    "outputs": [],
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "d64dc141",
    "metadata": {},
    "outputs": [
@@ -211,7 +213,7 @@
        " 0.20000000298023224)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "a8cbe0ea",
    "metadata": {},
    "outputs": [],
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "76667209",
    "metadata": {},
    "outputs": [],
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "16d61d45",
    "metadata": {},
    "outputs": [],
@@ -273,10 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "420b45b9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cdeline\\AppData\\Local\\Temp\\1\\ipykernel_44528\\3286348478.py:2: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  orga.fillna(method='ffill')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -337,7 +347,7 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>All tree</td>\n",
        "      <td>NaN</td>\n",
@@ -1685,7 +1695,7 @@
        "51     NSRDB     NSRDB     NSRDB  NSRDB    7       0  ...              NSRDB   \n",
        "\n",
        "   TrackerAngle irrad_mod  sky_model    Module  Module Temperature TestPOA  \\\n",
-       "0           0.0         3          2  All tree                 NaN     NaN   \n",
+       "0           0.0         4          2  All tree                 NaN     NaN   \n",
        "1           0.0         0          2  All tree                 NaN     Yes   \n",
        "2           0.0         0          2  All tree                 NaN     Yes   \n",
        "3           0.0         0          2  All tree                 NaN     Yes   \n",
@@ -1795,7 +1805,7 @@
        "[52 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1807,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "7b89988b",
    "metadata": {},
    "outputs": [],
@@ -1818,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "9cbe135c",
    "metadata": {},
    "outputs": [],
@@ -1828,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "c6ab3aa7",
    "metadata": {},
    "outputs": [],
@@ -1843,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "ab765fe9",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1863,7 @@
        "1.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,17 +1874,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "63157b1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 0, 1, 2, 4], dtype=int64)"
+       "array([4, 0, 1, 2, 3], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "7118ab79",
    "metadata": {},
    "outputs": [
@@ -1893,14 +1903,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26\n"
+      "19\n"
      ]
     }
    ],
    "source": [
     "dfAll = pd.DataFrame()\n",
     "\n",
-    "for ii in range(0, len(orga)):  # loop here over all the weather files or sims.\n",
+    "for ii in range(19,20): #len(orga) # loop here over all the weather files or sims.\n",
     "\n",
     "    print(ii)\n",
     "    weatherfile = os.path.join(InputFilesFolder,'WF_SAM_'+orga.loc[ii]['WeatherFile_Name']+'.csv')\n",
@@ -1926,6 +1936,7 @@
     "    pv9.SolarResource.irrad_mode = orga.loc[ii]['irrad_mod']\n",
     "    \n",
     "    # So that irrad_mod for POA works shading has to be inactivated.\n",
+    "    \"\"\"\n",
     "    if orga.loc[ii]['irrad_mod'] >= 3:\n",
     "        pv2.Shading.subarray1_shade_mode = 0\n",
     "        pv4.Shading.subarray1_shade_mode = 0\n",
@@ -1936,7 +1947,7 @@
     "        pv4.Shading.subarray1_shade_mode = 1.0\n",
     "        pv8.Shading.subarray1_shade_mode = 1.0\n",
     "        pv9.Shading.subarray1_shade_mode = 1.0\n",
-    "    \n",
+    "    \"\"\"\n",
     "    grid2.SystemOutput.gen = [0] * 8760  # p_out   # let's set all the values to 0\n",
     "    pv2.execute()\n",
     "    grid2.execute()\n",
