Add IEC 5 minute weatherfiles

--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "id": "fe95ca47",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "28a9256e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "cb0af38a",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pandas version: 1.5.0\n"
+      "Pandas version: 1.5.3\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "53aea2f5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "3ed0c07f",
    "metadata": {
     "scrolled": true
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "09dd269a",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "853a4f01",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "7e98b799",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "471f13bc",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "f46b581b",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "id": "1206930f",
    "metadata": {},
    "outputs": [],
@@ -382,12 +382,13 @@
     "filterdates = (data.index >= '2021-06-01')  & (data.index < '2022-06-01') \n",
     "data2 = data[filterdates].copy()\n",
     "data3 = data[filterdates].resample('60T', label='right', closed='right').mean().copy()\n",
-    "data_das = data[filterdates].resample('15T', label='right', closed='right').mean().copy()"
+    "data_das = data[filterdates].resample('15T', label='right', closed='left').mean().copy()\n",
+    "data_5min = data[filterdates].resample('5T', label='right', closed='left').mean().copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "4ee6f2c7",
    "metadata": {},
    "outputs": [],
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "e35840c5",
    "metadata": {},
    "outputs": [
@@ -407,7 +408,7 @@
        "Text(0, 0.5, 'Albedo')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "9e704107",
    "metadata": {},
    "outputs": [
@@ -479,7 +480,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "69f364a1",
    "metadata": {},
    "outputs": [
@@ -528,6 +529,31 @@
     "                          'sunkitty_GRI_CM22':'albedo_down', 'SRRL_GHI':'albedo_up'})\n",
     "print(data_das_out.columns)\n",
     "data_das_out.to_csv(os.path.join('Analysis','data','Rows2-9_2021-2022_15T.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "96b0775a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1-minute data for IEC61724-2 method\n",
+    "data_5min['Hydra_avg'] = data_5min[['Hydra_current_1','Hydra_current_2','Hydra_current_3','Hydra_current_4','Hydra_current_5',\n",
+    "                                      'Hydra_current_6','Hydra_current_7','Hydra_current_8','Hydra_current_9','Hydra_current_10',\n",
+    "                                      'Hydra_current_11','Hydra_current_12']].mean(axis=1)\n",
+    "\n",
+    "data_5min_out = data_5min[['Gfront','Grear', 'row2wind_speed','temp_ambient_FieldAverage',\n",
+    "                        'sunkitty_GRI_CM22', 'SRRL_GHI','SRRL_DHI','Hydra_avg',\n",
+    "                        'Yf2','row2tmod_1', 'row2tmod_2', \n",
+    "                         'Yf4','row4tmod_1', 'row4tmod_2', \n",
+    "                         'Yf8','row8tmod_1', 'row8tmod_2', \n",
+    "                         ]]\n",
+    "data_5min_out = data_5min_out.rename(columns={'Gfront':'Gfront_poa','Yf2':'power_dc_inv2',\n",
+    "                                            'Yf4':'power_dc_inv4','Yf8':'power_dc_inv8', \n",
+    "                          'sunkitty_GRI_CM22':'albedo_down', 'SRRL_GHI':'albedo_up'})\n",
+    "\n",
+    "data_5min_out.to_csv(os.path.join('Analysis','data','Rows2-8_2021-2022_5T.csv'))"
    ]
   },
   {
@@ -596,7 +622,7 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>All tree</td>\n",
        "      <td>NaN</td>\n",
@@ -1220,7 +1246,7 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>All tree</td>\n",
        "      <td>NaN</td>\n",
@@ -1944,7 +1970,7 @@
        "51     NSRDB     NSRDB     NSRDB  NSRDB    7       0  ...              NSRDB   \n",
        "\n",
        "   TrackerAngle irrad_mod  sky_model    Module  Module Temperature TestPOA  \\\n",
-       "0           0.0         3          2  All tree                 NaN     NaN   \n",
+       "0           0.0         4          2  All tree                 NaN     NaN   \n",
        "1           0.0         0          2  All tree                 NaN     Yes   \n",
        "2           0.0         0          2  All tree                 NaN     Yes   \n",
        "3           0.0         0          2  All tree                 NaN     Yes   \n",
@@ -1970,7 +1996,7 @@
        "23          0.0         3          2  All tree                 NaN     Yes   \n",
        "24          0.0         3          2  All tree                 NaN     Yes   \n",
        "25          0.0         3          2  All tree                 NaN     Yes   \n",
-       "26          0.0         4          2  All tree                 NaN     Yes   \n",
+       "26          0.0         3          2  All tree                 NaN     Yes   \n",
        "27          0.0         4          2  All tree                 NaN     Yes   \n",
        "28          0.0         4          2  All tree                 NaN     Yes   \n",
        "29          0.0         4          2  All tree                 NaN     Yes   \n",
@@ -2066,47 +2092,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "4350dd5a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Method                                      1\n",
-       "Sim                                       P11\n",
-       "WeatherFile_Name                          P11\n",
-       "NOTES                 POA Pyr, monthly albedo\n",
-       "DNI                                         -\n",
-       "DHI                                         -\n",
-       "GHI                                  SRRL_GHI\n",
-       "POA                                         3\n",
-       "BOA                                         0\n",
-       "POABOA                                      1\n",
-       "Albedo                                      5\n",
-       "WindSpeed                                   0\n",
-       "AmbientTemperature                          0\n",
-       "TrackerAngle                              0.0\n",
-       "irrad_mod                                   3\n",
-       "sky_model                                   2\n",
-       "Module                               All tree\n",
-       "Module Temperature                        NaN\n",
-       "TestPOA                                   NaN\n",
-       "TestBOA                                   NaN\n",
-       "TestModuleTemp                            NaN\n",
-       "TestPerformance                           NaN\n",
-       "Name: 0, dtype: object"
+       "Method                       1\n",
+       "Sim                        S02\n",
+       "WeatherFile_Name            00\n",
+       "NOTES                      NaN\n",
+       "DNI                   SRRL_DNI\n",
+       "DHI                   SRRL_DHI\n",
+       "GHI                   SRRL_GHI\n",
+       "POA                          0\n",
+       "BOA                          0\n",
+       "POABOA                       0\n",
+       "Albedo                       0\n",
+       "WindSpeed                    0\n",
+       "AmbientTemperature           0\n",
+       "TrackerAngle               0.0\n",
+       "irrad_mod                    2\n",
+       "sky_model                    2\n",
+       "Module                All tree\n",
+       "Module Temperature         NaN\n",
+       "TestPOA                    Yes\n",
+       "TestBOA                    Yes\n",
+       "TestModuleTemp             Yes\n",
+       "TestPerformance            Yes\n",
+       "Name: 14, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#for ii in range(0,len(orga)):\n",
-    "ii=0\n",
-    "orga.loc[ii] "
+    "ii=14\n",
+    "orga.iloc[ii] "
    ]
   },
   {
@@ -2116,7 +2142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ii in range(0, 1): #len(orga)\n",
+    "for ii in range(14, 15): #len(orga)\n",
     "\n",
     "    savefilevar = os.path.join(InputFilesFolder,'WF_SAM_'+orga.loc[ii]['WeatherFile_Name']+'.csv')\n",
     "    \n",
@@ -2292,6 +2318,107 @@
     "                            includeminute = False)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a5c9a68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Gfront_poa', 'Grear', 'row2wind_speed', 'temp_ambient_FieldAverage',\n",
+       "       'albedo_down', 'albedo_up', 'SRRL_DHI', 'Hydra_avg', 'power_dc_inv2',\n",
+       "       'row2tmod_1', 'row2tmod_2', 'power_dc_inv4', 'row4tmod_1', 'row4tmod_2',\n",
+       "       'power_dc_inv8', 'row8tmod_1', 'row8tmod_2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_5min_out.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f3e5f823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save 5-minute IEC files - Option1B (GHI,DHI,Albedo), Option2A (POA+BOA), Option2B (RefMod POA)\n",
+    "saveSAM_WeatherFile(timestamps = data_5min_out.index, \n",
+    "                    windspeed = data_5min_out['row2wind_speed'], \n",
+    "                    temp_amb = data_5min_out['temp_ambient_FieldAverage'], \n",
+    "                    Albedo = data_5min_out['albedo_down'] / data_5min_out['albedo_up'] , \n",
+    "                    DHI = data_5min_out.SRRL_DHI,  GHI = data_5min_out.albedo_up,\n",
+    "                    savefile = os.path.join(InputFilesFolder,'WF_SAM_IEC1B.csv'), \n",
+    "                    includeminute = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "8b0b7ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save 5-minute IEC files - Option2 (Gpoa for Row8)\n",
+    "saveSAM_WeatherFile(timestamps = data_5min_out.index, \n",
+    "                    windspeed = data_5min_out['row2wind_speed'], \n",
+    "                    temp_amb = data_5min_out['temp_ambient_FieldAverage'], \n",
+    "                    Albedo = data_5min_out['albedo_down'] / data_5min_out['albedo_up'] , \n",
+    "                    POA = data_5min_out.Gfront_poa,\n",
+    "                    savefile = os.path.join(InputFilesFolder,'WF_SAM_IEC2Mono.csv'), \n",
+    "                    includeminute = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "32f96d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save 5-minute IEC files - Option2A (Gpoa+Bifi*Gboa POA)\n",
+    "saveSAM_WeatherFile(timestamps = data_5min_out.index, \n",
+    "                    windspeed = data_5min_out['row2wind_speed'], \n",
+    "                    temp_amb = data_5min_out['temp_ambient_FieldAverage'], \n",
+    "                    Albedo = data_5min_out['albedo_down'] / data_5min_out['albedo_up'] , \n",
+    "                    POA = data_5min_out.Gfront_poa + 0.72*data_5min_out.Grear,\n",
+    "                    savefile = os.path.join(InputFilesFolder,'WF_SAM_IEC2A.csv'), \n",
+    "                    includeminute = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "71f9d096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save 5-minute IEC files - Option2B (RefMod POA)\n",
+    "saveSAM_WeatherFile(timestamps = data_5min_out.index, \n",
+    "                    windspeed = data_5min_out['row2wind_speed'], \n",
+    "                    temp_amb = data_5min_out['temp_ambient_FieldAverage'], \n",
+    "                    Albedo = data_5min_out['albedo_down'] / data_5min_out['albedo_up'] , \n",
+    "                    POA = data_5min_out['Hydra_avg']*1000 / 9.56,\n",
+    "                    savefile = os.path.join(InputFilesFolder,'WF_SAM_IEC2B.csv'), \n",
+    "                    includeminute = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c5e764",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
