Run SAM analysis for IEC method

--- a/SAM/2 - pySAM by Organized Simulations.ipynb
+++ b/SAM/2 - pySAM by Organized Simulations.ipynb
@@ -280,14 +280,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cdeline\\AppData\\Local\\Temp\\1\\ipykernel_4952\\3286348478.py:2: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  orga.fillna(method='ffill')\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1817,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "7b89988b",
    "metadata": {},
    "outputs": [],
@@ -1828,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "9cbe135c",
    "metadata": {},
    "outputs": [],
@@ -1838,22 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c6ab3aa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wftimestamp = pd.read_csv(os.path.join(InputFilesFolder,'WF_SAM_'+orga.loc[0]['WeatherFile_Name']+'.csv'), skiprows=2)\n",
-    "datelist = list(pd.to_datetime(wftimestamp.iloc[:,0:4]))\n",
-    "months = list(wftimestamp.iloc[:,1])\n",
-    "years = list(wftimestamp.iloc[:,0])\n",
-    "days = list(wftimestamp.iloc[:,2])\n",
-    "hours = list(wftimestamp.iloc[:,3])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ab765fe9",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1840,7 @@
        "1.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,12 +1939,22 @@
     "dfAll = pd.DataFrame()\n",
     "\n",
     "for ii in range(0,len(orga)): # # loop here over all the weather files or sims.\n",
-    "\n",
+    "#for ii in range (53,len(orga)):\n",
     "    print(ii)\n",
+    "\n",
     "    weatherfile = os.path.join(InputFilesFolder,'WF_SAM_'+orga.loc[ii]['WeatherFile_Name']+'.csv')\n",
     "    savefilevar = os.path.join(ResultsFolder,'Results_pySAM_'+orga.loc[ii]['Sim']+'.csv')\n",
     "\n",
-    "#    POABOA = orga.loc[ii]['POABOA']\n",
+    "    \n",
+    "    wftimestamp = pd.read_csv(weatherfile, skiprows=2)\n",
+    "    datelist = list(pd.to_datetime(wftimestamp.iloc[:,0:4]))\n",
+    "    months = list(wftimestamp.iloc[:,1])\n",
+    "    years = list(wftimestamp.iloc[:,0])\n",
+    "    days = list(wftimestamp.iloc[:,2])\n",
+    "    hours = list(wftimestamp.iloc[:,3])\n",
+    "    minutes = list(wftimestamp.iloc[:,4])\n",
+    "    \n",
+    "    #    POABOA = orga.loc[ii]['POABOA']\n",
     "    irrad_mod = orga.loc[ii]['irrad_mod']\n",
     "    sky_model = orga.loc[ii]['sky_model']\n",
     "\n",
@@ -1999,25 +1986,25 @@
     "        pv8.Shading.subarray1_shade_mode = 1.0\n",
     "        pv9.Shading.subarray1_shade_mode = 1.0\n",
     "    \"\"\"\n",
-    "    grid2.SystemOutput.gen = [0] * 8760  # p_out   # let's set all the values to 0\n",
+    "    grid2.SystemOutput.gen = [0] * len(datelist)  # p_out   # let's set all the values to 0\n",
     "    pv2.execute()\n",
     "    grid2.execute()\n",
     "    ur2.execute()\n",
     "    so2.execute()\n",
     "\n",
-    "    grid4.SystemOutput.gen = [0] * 8760  # p_out   # let's set all the values to 0\n",
+    "    grid4.SystemOutput.gen = [0] * len(datelist)  # p_out   # let's set all the values to 0\n",
     "    pv4.execute()\n",
     "    grid4.execute()\n",
     "    ur4.execute()\n",
     "    so4.execute()\n",
     "\n",
-    "    grid8.SystemOutput.gen = [0] * 8760  # p_out   # let's set all the values to 0\n",
+    "    grid8.SystemOutput.gen = [0] * len(datelist)  # p_out   # let's set all the values to 0\n",
     "    pv8.execute()\n",
     "    grid8.execute()\n",
     "    ur8.execute()\n",
     "    so8.execute()\n",
     "\n",
-    "    grid9.SystemOutput.gen = [0] * 8760  # p_out   # let's set all the values to 0\n",
+    "    grid9.SystemOutput.gen = [0] * len(datelist)  # p_out   # let's set all the values to 0\n",
     "    pv9.execute()\n",
     "    grid9.execute()\n",
     "    ur9.execute()\n",
@@ -2055,7 +2042,7 @@
     "    alb = list(results['alb'])\n",
     "    \n",
     "    \n",
-    "    simtyp = [orga.loc[ii]['Sim']] * 8760\n",
+    "    simtyp = [orga.loc[ii]['Sim']] * len(datelist)\n",
     "\n",
     "    res = pd.DataFrame(list(zip(simtyp, power2, celltemp2, rear2, front2,\n",
     "                               power4, celltemp4, rear4, front4,\n",
@@ -2066,7 +2053,7 @@
     "                     'Power8' , 'CellTemp8', 'Front8',\n",
     "                     'Power9' , 'CellTemp9', 'Rear9', 'Front9', 'DNI', 'DHI', 'Alb'])\n",
     "\n",
-    "    res = res[0:8760]\n",
+    "    res = res[0:len(datelist)]\n",
     "    res['index'] = res.index\n",
     "    res['Power2']= res['Power2']/system_capacity2 # normalizing by the system_capacity\n",
     "    res['Power4']= res['Power4']/system_capacity4 # normalizing by the system_capacity\n",
@@ -2076,7 +2063,7 @@
     "    res['Year'] = years\n",
     "    res['Month'] = months\n",
     "    res['Hour'] = hours\n",
-    "\n",
+    "    res['Minutes'] = minutes\n",
     "    #    res.index = timestamps\n",
     "    res.to_pickle('Sim_'+orga.loc[ii]['Sim']+'.pkl')\n",
     "    res.to_csv(savefilevar, float_format='%g')\n",
