Method 2b temp correct

--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "fe95ca47",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "28a9256e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "cb0af38a",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "53aea2f5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "3ed0c07f",
    "metadata": {
     "scrolled": true
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "09dd269a",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "853a4f01",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "7e98b799",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "471f13bc",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "f46b581b",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "1206930f",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "4ee6f2c7",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "69f364a1",
    "metadata": {},
    "outputs": [
@@ -533,12 +533,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "96b0775a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1-minute data for IEC61724-2 method\n",
+    "# 5-minute data for IEC61724-2 method\n",
     "data_5min['Hydra_avg'] = data_5min[['Hydra_current_1','Hydra_current_2','Hydra_current_3','Hydra_current_4','Hydra_current_5',\n",
     "                                      'Hydra_current_6','Hydra_current_7','Hydra_current_8','Hydra_current_9','Hydra_current_10',\n",
     "                                      'Hydra_current_11','Hydra_current_12']].mean(axis=1)\n",
@@ -2321,8 +2321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "a5c9a68d",
+   "execution_count": 15,
+   "id": "860fdc4b",
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2335,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2397,18 +2397,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "71f9d096",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save 5-minute IEC files - Option2B (RefMod POA)\n",
+    "# save 5-minute IEC files - Option2B (RefMod POA) TEMPERATURE CORRECT FIRST!!\n",
     "saveSAM_WeatherFile(timestamps = data_5min_out.index, \n",
     "                    windspeed = data_5min_out['row2wind_speed'], \n",
     "                    temp_amb = data_5min_out['temp_ambient_FieldAverage'], \n",
     "                    Albedo = data_5min_out['albedo_down'] / data_5min_out['albedo_up'] , \n",
-    "                    POA = data_5min_out['Hydra_avg']*1000 / 9.56,\n",
-    "                    savefile = os.path.join(InputFilesFolder,'WF_SAM_IEC2B.csv'), \n",
+    "                    POA = data_5min_out['Hydra_avg']*1000 / 9.54 * (1-.00054 *(data_5min_out.row2tmod_2-25)),\n",
+    "                    savefile = os.path.join(InputFilesFolder,'WF_SAM_IEC2B_tcorr.csv'), \n",
     "                    includeminute = True)"
    ]
   },
