Final figures for publication

--- a/Analysis/Method4_calibration_3_29_2023.ipynb
+++ b/Analysis/Method4_calibration_3_29_2023.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -452,16 +452,6 @@
       "RefMod = 0.00956 Gtotal\n",
       "RefMod_tcorr = 0.00952 Gtotal\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0, 0.5, 'Reference Module temp-corrected Isc (A)')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -495,7 +485,28 @@
     "#plt.title(f'Refmod with rear covered = {refmod_fit[0]:0.5f} Gtotal')\n",
     "\n",
     "plt.xlabel(r'Front POA ($W/m^2$)')\n",
-    "plt.ylabel('Reference Module temp-corrected Isc (A)')"
+    "plt.ylabel('Reference Module temp-corrected Isc (A)')\n",
+    "plt.savefig('Fig5_refmod_cal.png', dpi=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\cdeline\\\\Documents\\\\Python Scripts\\\\RTC analysis'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
